# humanize-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-heavy.txt  server.py
benchmark/: README.md  __init__.py  benchmark_suite.py  detectors.py  pre_commit_check.py  run_benchmark.py  smoke_test.py  test_corpus.py
docs/: ARCHITECTURE.md  ETHICS.md  REVIEW_v0.1.0.md
pipelines/: __init__.py  _paraphrase_models.py  base.py  iterative.py  pass_01_em_dash.py  pass_02_lexical.py  pass_03_structural.py  pass_04_rhythm.py  pass_05_contractions.py  pass_06_voice_injection.py  pass_07_punctuation.py  pass_08_register_shift.py  pass_09_paraphrase.py  tells_detector.py
research/: 00_executive_summary.md  01_detector_landscape.md  02_ai_tells_catalog.md  03_human_diversity.md  04_humanization_techniques.md  05_style_corpora.md  06_implementation_recommendations.md  references.bib
styles/: __init__.py  academic_human.json  autistic_friendly.json  base.json  blog.json  book_chapter.json  casual_dm.json  creative_fiction.json  esl_friendly.json  lexical_substitutions.json  linkedin.json  reddit.json  twitter.json
tests/: test_iterative.py  test_server.py
tests/test_benchmark/: test_benchmark_suite.py  test_heuristic_detector.py
tests/test_pipelines/: manual_rhythm_validation.py  test_pass_01_em_dash.py  test_pass_02_lexical.py  test_pass_03_structural.py  test_pass_04_rhythm.py  test_pass_05_contractions.py  test_pass_06_voice_injection.py  test_pass_07_punctuation.py  test_pass_08_register_shift.py  test_pass_09_paraphrase.py  test_pipeline_e2e.py  test_tells_detector.py
